[package]
name = "const-array-init"
version = "1.0.0"
rust-version = "1.56.0"
authors = ["IoaNN UwU <ioannxd@gmail.com>"]
edition = "2021"

license = "MIT OR Apache-2.0"
homepage = "https://github.com/IoaNNUwU/const-array-init-macro"
repository = "https://github.com/IoaNNUwU/const-array-init-macro"
description = "Macros used to initialize arrays in const context using closure syntax or const function"
readme = "README.md"

keywords = ["const", "array", "init", "macro", "fn"]
categories = ["no-std::no-alloc", "config", "development-tools"]